--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "better-scroll": "^0.2.4",
+    "fastclick": "^1.0.6",
+    "jsonp": "^0.2.1",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1",
-    "fastclick": "^1.0.6"
+    "vue-router": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
