--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-runtime": "^6.0.0",
     "better-scroll": "^0.2.4",
+    "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1"
+    "vue-lazyload": "^1.0.5",
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
